--- a/Pregunta 2/Frontend/mascotas/src/app/mascotas/listar-mascotas/listar-mascotas.component.html
+++ b/Pregunta 2/Frontend/mascotas/src/app/mascotas/listar-mascotas/listar-mascotas.component.html
@@ -13,6 +13,7 @@
   <table>
     <thead>
       <tr>
+        <th>id</th>
         <th>Nombre</th>
         <th>Tipo</th>
         <th>Raza</th>
@@ -21,6 +22,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let mascota of mascotas">
+        <td>{{ mascota.id }}</td>
         <td>{{ mascota.nombre }}</td>
         <td>{{ mascota.tipo }}</td>
         <td>{{ mascota.raza }}</td>
